RESOLVED FIXED235013
Non-unified build fixes, early January 2022 edition
https://bugs.webkit.org/show_bug.cgi?id=235013
Summary Non-unified build fixes, early January 2022 edition
Adrian Perez
Reported 2022-01-09 04:23:35 PST
Happy 2022, y'all! 🎆️
Attachments
Patch (11.91 KB, patch)
2022-01-11 04:21 PST, Adrian Perez
ews-feeder: commit-queue-
Adrian Perez
Comment 1 2022-01-11 04:21:35 PST
EWS
Comment 2 2022-01-11 06:44:40 PST
Committed r287877 (245921@main): <https://commits.webkit.org/245921@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 448837 [details].
Radar WebKit Bug Importer
Comment 3 2022-01-11 06:45:21 PST
Note You need to log in before you can comment on or make changes to this bug.